Navbar collapses toggles according to scroll, changed navbar color and fixed auth form

--- a/static/categories/basestyle.css
+++ b/static/categories/basestyle.css
@@ -1,13 +1,38 @@
+/* ---------- */
+/* MAIN SETUP */
+/* ---------- */
 body {
     background-color: white
 }
 
-.btn{
+.btn {
     border-radius: 200px;
 }
 
 .container {
     font-size: 1.25em;
+}
+
+/* --------------- */
+/* NAVBAR */
+/* --------------- */
+.main-nav {
+    background-color: #1DA1F2;
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    z-index: 1030;
+}
+
+.scrolled-down {
+    transform: translateY(-100%);
+    transition: all 0.3s ease-in-out;
+}
+
+.scrolled-up {
+    transform: translateY(0);
+    transition: all 0.3s ease-in-out;
 }
 
 .navbar .nav-item a {
